WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279925
Adjust the Safe Browsing warning UI for tvOS
https://bugs.webkit.org/show_bug.cgi?id=279925
Summary
Adjust the Safe Browsing warning UI for tvOS
Wenson Hsieh
Reported
2024-09-18 15:34:52 PDT
rdar://133849959
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-09-18 15:59:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33861
EWS
Comment 2
2024-09-18 19:07:21 PDT
Committed
283884@main
(90658f0a3207): <
https://commits.webkit.org/283884@main
> Reviewed commits have been landed. Closing PR #33861 and removing active labels.
EWS
Comment 3
2024-09-25 15:56:19 PDT
Committed
283286.137@safari-7620-branch
(785ab88e87cc): <
https://commits.webkit.org/283286.137@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1907 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug