Adjust the Safe Browsing warning UI for tvOS https://bugs.webkit.org/show_bug.cgi?id=279925 rdar://133849959

Reviewed by Aditya Keerthi.

Adjust `_WKWarningView` to use the same `0.2` multiplier between the top anchors and bottom anchors,
which we currently use on watchOS. Also do some light refactoring when creating and activating these
constraints, to reduce code duplication.

* Source/WebKit/UIProcess/Cocoa/_WKWarningView.mm:
(-[_WKWarningView addContent]):

Canonical link: https://commits.webkit.org/283884@main