Source/WebKit/UIProcess/Cocoa/_WKWarningView.mm
@@ -49,6 +49,11 @@ constexpr CGFloat marginSize = 9;
 constexpr CGFloat marginSize = 20;
 #endif
 constexpr CGFloat maxWidth = 675;
+#if PLATFORM(WATCHOS) || PLATFORM(APPLETV)
+constexpr CGFloat topToBottomMarginMultiplier = 0.2;
+#else
+constexpr CGFloat topToBottomMarginMultiplier = 0.5;
+#endif
 #endif
 
 #if PLATFORM(MAC)
@@ -399,25 +404,21 @@ static RetainPtr<ViewType> makeLabel(NSAttributedString *attributedString)
     [box setTranslatesAutoresizingMaskIntoConstraints:NO];
     [self addSubview:box.get()];
 
-#if PLATFORM(WATCHOS)
     [NSLayoutConstraint activateConstraints:@[
+#if PLATFORM(WATCHOS)
         [[[box leadingAnchor] anchorWithOffsetToAnchor:[exclamationPoint leadingAnchor]] constraintEqualToAnchor:[[exclamationPoint trailingAnchor] anchorWithOffsetToAnchor:[box trailingAnchor]]],
         [[[box leadingAnchor] anchorWithOffsetToAnchor:[title leadingAnchor]] constraintEqualToConstant:marginSize],
-        [[[title bottomAnchor] anchorWithOffsetToAnchor:[warning topAnchor]] constraintEqualToConstant:marginSize],
         [[[exclamationPoint bottomAnchor] anchorWithOffsetToAnchor:[title topAnchor]] constraintEqualToConstant:marginSize],
         [[[box topAnchor] anchorWithOffsetToAnchor:[exclamationPoint topAnchor]] constraintEqualToConstant:marginSize + self.frame.size.height / 2],
-        [[self.topAnchor anchorWithOffsetToAnchor:[box topAnchor]] constraintEqualToAnchor:[[box bottomAnchor] anchorWithOffsetToAnchor:self.bottomAnchor] multiplier:0.2],
-    ]];
 #elif HAVE(SAFE_BROWSING)
-    [NSLayoutConstraint activateConstraints:@[
         [[[box leadingAnchor] anchorWithOffsetToAnchor:[exclamationPoint leadingAnchor]] constraintEqualToConstant:marginSize],
         [[[box leadingAnchor] anchorWithOffsetToAnchor:[title leadingAnchor]] constraintEqualToConstant:marginSize * 1.5 + exclamationPointSize],
         [[[title topAnchor] anchorWithOffsetToAnchor:[exclamationPoint topAnchor]] constraintEqualToAnchor:[[exclamationPoint bottomAnchor] anchorWithOffsetToAnchor:[title bottomAnchor]]],
-        [[[title bottomAnchor] anchorWithOffsetToAnchor:[warning topAnchor]] constraintEqualToConstant:marginSize],
         [[[box topAnchor] anchorWithOffsetToAnchor:[title topAnchor]] constraintEqualToConstant:marginSize],
-        [[self.topAnchor anchorWithOffsetToAnchor:[box topAnchor]] constraintEqualToAnchor:[[box bottomAnchor] anchorWithOffsetToAnchor:self.bottomAnchor] multiplier:0.5],
-    ]];
 #endif
+        [[[title bottomAnchor] anchorWithOffsetToAnchor:[warning topAnchor]] constraintEqualToConstant:marginSize],
+        [[self.topAnchor anchorWithOffsetToAnchor:[box topAnchor]] constraintEqualToAnchor:[[box bottomAnchor] anchorWithOffsetToAnchor:self.bottomAnchor] multiplier:topToBottomMarginMultiplier],
+    ]];
 
 #if HAVE(SAFE_BROWSING)
     [NSLayoutConstraint activateConstraints:@[
